Adjusted body width and height to combat mobile overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-attachment: scroll;
   min-height: 100vh;
+  width:100%;
   /* min-width:100vw; */
  
   font-family:  'Lora', sans-serif;
