--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: -webkit-fill-available;
+  max-width: 100vw;
+  min-height: 100vh;
   
 
 
@@ -17,9 +19,5 @@ code {
     monospace;
 }
 
-@media only screen and (max-width: 1000px){
-  body{
-    overflow-x: hidden;
-  }
-}
+
 
